fix: remove horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ nav{
     display: flex;
     justify-content: flex-end;
 
-    width: 100vw;
     padding: 30px 0 0 0;
     margin-top: 10px;
   
